# Barebones-opengl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  launch.json  licence  log.h  main.cpp  makefile
res/: test.txt
res/model/: box-wood.mtl  legacy.mtl  monkey-mat.mtl  monkey.mtl
res/shaders/: basic.glsl  bp.glsl  light.glsl  mtl.glsl  mtlv2.glsl
src/: VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp  gl.c  gl.cpp  gl.h  gl.hpp  interface.hpp  log.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  object.cpp  object.hpp  shaders.cpp  shaders.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
